added  a lot of new features library of cpp, strings, messages, log services, leaks test, and improved a lot the megaphone.cpp because now we can even convert lowercase unicode in their uppper case veriso

--- a/cpp_module00/ex00/Makefile
+++ b/cpp_module00/ex00/Makefile
@@ -1,27 +1,66 @@
-NAME=megaphone
-CXX = c++
-CXXFLAGS = -Wall -Wall -Werror -std=c++98
-CPPFLAGS ?=
+CXX=c++
+CXXFLAGS=-Wall -Wextra -Werror
+INC=-I/mnt/c/Users/dylan/Shared/picine_cpp/libcpp
+LDFLAGS=
+LIB_DIR=/mnt/c/Users/dylan/Shared/picine_cpp/libcpp
+LIBS=-lcpp
+SRC=megaphone.cpp 
+OBJ=$(SRC:.cpp=.o)
+OBJ := $(OBJ:.c=.o)
+TARGET=ex00
 
-SRCS= megaphone.cpp
-OBJS= $(SRCS:.cpp=.o)
+# If INC wasn't provided by env, add common candidate include dirs inside $(LIB_DIR)
+ifeq ($(strip $(INC)),)
+INC := -I$(LIB_DIR) -I$(LIB_DIR)/include -I$(LIB_DIR)/inc
+endif
 
-all : $(NAME)
+# If libcpp provides a single top-level header, pre-include it so declarations are available
+ifeq ($(wildcard $(LIB_DIR)/libcpp.h),)
+CPPFLAGS :=
+else
+CPPFLAGS := -include $(LIB_DIR)/libcpp.h
+endif
 
-$(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) $(OBJS) -o $@
+all: $(TARGET)
 
-%.o : %.cpp
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c $< -o $@ 
+$(TARGET): $(OBJ)
+	$(MAKE) -C $(LIB_DIR)
+	@# prefer linking lib object files if present, else prefer direct lib file, else fallback to -L/-l
+	@libobjs="$$(ls $(LIB_DIR)/*.o 2>/dev/null || true)"; \
+	libfile=""; \
+	if [ -f "$(LIB_DIR)/libcpp.a" ]; then \
+		libfile="$(LIB_DIR)/libcpp.a"; \
+	elif [ -f "$(LIB_DIR)/libcpp.so" ]; then \
+		libfile="$(LIB_DIR)/libcpp.so"; \
+	fi; \
+	if [ -n "$$libobjs" ]; then \
+		$(CXX) $(CXXFLAGS) $(CPPFLAGS) $(INC) $(OBJ) $$libobjs -o $(TARGET) $(LDFLAGS) $$libfile; \
+	elif [ -n "$$libfile" ]; then \
+		$(CXX) $(CXXFLAGS) $(CPPFLAGS) $(INC) $(OBJ) -o $(TARGET) $(LDFLAGS) $$libfile; \
+	else \
+		$(CXX) $(CXXFLAGS) $(CPPFLAGS) $(INC) $(OBJ) -o $(TARGET) -L$(LIB_DIR) $(LDFLAGS) $(LIBS); \
+	fi
+
+%.o: %.cpp
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) $(INC) -c $< -o $@
+
+# compile .c as C++ (project uses C sources compiled with C++ toolchain)
+%.o: %.c
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) $(INC) -x c++ -c $< -o $@
 
 clean:
-	rm -rf $(OBJS)
+	rm -f $(OBJ)
 
 fclean: clean
-	rm -rf $(NAME)
+	rm -f $(TARGET)
 
-re : fclean all
+re: fclean all
 
-.PHONY: all clean fclean re
-	
+.PHONY: all clean fclean re diag
 
+diag:
+	@echo "=== Variables ==="; \
+	printf "CXX=%s\nCXXFLAGS=%s\nINC=%s\nLIB_DIR=%s\nLIBS=%s\nSRC=%s\nOBJ=%s\nTARGET=%s\n" "$(CXX)" "$(CXXFLAGS)" "$(INC)" "$(LIB_DIR)" "$(LIBS)" "$(SRC)" "$(OBJ)" "$(TARGET)"; \
+	echo; echo "=== libcpp directory listing ==="; ls -la "$(LIB_DIR)" || true; \
+	echo; echo "=== Generated Makefile (this dir) ==="; sed -n '1,200p' Makefile 2>/dev/null || echo "(no Makefile)"; \
+	echo; echo "=== Dry-run build ==="; $(MAKE) -n
