--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,37 @@
         "streambuf": "cpp",
         "typeinfo": "cpp"
 	},
-	"C_Cpp.errorSquiggles": "disabled"
+	"C_Cpp.errorSquiggles": "disabled",
+	"files.eol": "\n",
+	"files.trimTrailingWhitespace": true,
+	"files.insertFinalNewline": true,
+	"editor.detectIndentation": false,
+	"editor.tabSize": 2,
+	"editor.insertSpaces": true,
+	"editor.rulers": [80],
+	"editor.formatOnSave": true,
+	"[cpp]": {
+		"editor.tabSize": 2,
+		"editor.insertSpaces": true,
+		"editor.formatOnSave": true
+	},
+	"[c]": {
+		"editor.tabSize": 4,
+		"editor.insertSpaces": true,
+		"editor.formatOnSave": true
+	},
+  "[makefile]": {
+    "editor.tabSize": 4,
+    "editor.insertSpaces": false
+  },
+	"C_Cpp.clang_format_style": "file",
+	"clang-format.style": "file",
+	"clang-format.executable": "clang-format",
+	"editor.defaultFormatter": "xaver.clang-format",
+	"files.exclude": {
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/build": true
+	}
 }
