--- a/cpp_module01/ex00/Makefile
+++ b/cpp_module01/ex00/Makefile
@@ -2,7 +2,7 @@ CPP 		= 	c++
 CPPFLAGS	=	-Wall -Wextra -Werror -std=c++98
 NAME		=	zombie
 
-SRCS		=	main.cpp newZombie.cpp randomChump.cpp Zombie.cpp
+SRCS		=	main.cpp newZombie.cpp randomChump.cpp Zombie.cpp scope_test.cpp
 OBJS		=	$(SRCS:%.cpp=%.o)
 
 RM			= rm -f
@@ -17,7 +17,7 @@ $(NAME):$(OBJS)
 
 clean:
 	@$(RM) $(OBJS)
-	
+
 fclean: clean
 	@$(RM) $(NAME)
 
